--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "cloudinary": "^1.21.0",
+    "cors": "^2.8.5",
     "datauri": "^2.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
