--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nodemon": "^2.0.3"
   },
   "scripts": {
-    "start": "nodemon ./src/index.js",
-    "run": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "run": "nodemon ./src/index.js"
   }
 }
